add theme & fix

--- a/print.css
+++ b/print.css
@@ -21,7 +21,8 @@
   .toolbar,
   .container,
   #status,
-  .dialog-overlay {
+  .dialog-overlay,
+  .view-mode-toolbar {
     display: none !important;
   }
 
